--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,10 @@
+/*
+  Author: Sthefanny Silva
+  Class: CIS 4004 – Project 1
+  Assignment: Résumé Website
+  Date: September 2025
+  Description: CSS styling for résumé website (minimal · modern · professional theme).
+*/
 
 :root{
   --bg:#ffffff;
